@@ -1,7 +1,8 @@
 cholera 0.6.5.9000
 ==================
 
-- add isoLines() and isoVertices() prototypes.
+- re-add isoLines() and isoVertices() prototypes.
+- deprecate parallel implementation of euclideanPath().
 
 
 cholera 0.6.5
